--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@prisma/client": "^4.8.0",
     "apollo-server": "^3.11.1",
     "bcryptjs": "^2.4.3",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "prisma": "^4.8.0"
