--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server2.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.8.0",
-    "apollo-server": "^3.11.1",
+    "@graphql-tools/schema": "^8.3.2",
+    "@prisma/client": "^3.10.0",
+    "apollo-server": "^3.6.3",
+    "apollo-server-express": "^3.6.3",
     "bcryptjs": "^2.4.3",
-    "graphql": "^16.6.0",
-    "jsonwebtoken": "^9.0.0"
+    "express": "^4.17.3",
+    "graphql": "^16.3.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
-    "prisma": "^4.8.0"
+    "prisma": "^3.10.0"
+  },
+  "engines": {
+    "node": "16.13.0"
   }
 }
